Created all the spring and javascript components.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -19,6 +19,7 @@
 
     <!--services-->
     <script src="./newscache/service/service.config.js"></script>
+    <script src="./newscache/service/navbar.service.js"></script>
 
 
     <!--routes-->
