Created the javascript files for the interest page. Added more java stuff for doing a complete search in the navbar.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -20,15 +20,17 @@
     <!--services-->
     <script src="./newscache/service/service.config.js"></script>
     <script src="./newscache/service/navbar.service.js"></script>
-
+    <script src="./newscache/service/interest.service.js"></script>
 
     <!--routes-->
     <script src="./newscache/route/route.config.js"></script>
-
+    <script src="./newscache/route/interest.routes.js"></script>
 
     <!--controllers-->
     <script src="./newscache/controller/controller.config.js"></script>
     <script src="./newscache/controller/navbar.controller.js"></script>
+    <script src="./newscache/controller/interest.controller.js"></script>
+
 
     <!--directives-->
     <script src="./newscache/directive/directive.config.js"></script>
