--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <title>News Cache</title>
     <link href="./bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="./css/newscache.css" rel="stylesheet" />
+    <link href="./img/favicon.png" rel="icon" />
     <script src="./bower_components/api-check/dist/api-check.js"></script>
     <script src="./bower_components/angular/angular.js"></script>
     <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
