Created the background image directive

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -36,6 +36,7 @@
     <!--directives-->
     <script src="./newscache/directive/directive.config.js"></script>
     <script src="./newscache/directive/navbar.directive.js"></script>
+    <script src="./newscache/directive/back_img.directive.js"></script>
 
 
 </head>
