Added masonry dependencies.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -12,6 +12,17 @@
     <script src="./bower_components/angular-route/angular-route.js"></script>
     <script src="./bower_components/angular-resource/angular-resource.js"></script>
     <script src="./bower_components/angular-messages/angular-messages.js"></script>
+    <script src="./bower_components/jquery/dist/jquery.js"></script>
+    <script src="./bower_components/jquery-bridget/jquery-bridget.js"></script>
+    <script src="./bower_components/ev-emitter/ev-emitter.js"></script>
+    <script src="./bower_components/desandro-matches-selector/matches-selector.js"></script>
+    <script src="./bower_components/fizzy-ui-utils/utils.js"></script>
+    <script src="./bower_components/get-size/get-size.js"></script>
+    <script src="./bower_components/outlayer/item.js"></script>
+    <script src="./bower_components/outlayer/outlayer.js"></script>
+    <script src="./bower_components/masonry/masonry.js"></script>
+    <script src="./bower_components/imagesloaded/imagesloaded.js"></script>
+    <script src="./bower_components/angular-masonry/angular-masonry.js"></script>
 
     <script src="./partials.min.js"></script>
     <!--<script src="./all.min.js"></script>-->
