Created all the modal stuff.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -42,6 +42,7 @@
     <script src="./newscache/controller/controller.config.js"></script>
     <script src="./newscache/controller/navbar.controller.js"></script>
     <script src="./newscache/controller/interest.controller.js"></script>
+    <script src="./newscache/controller/storyModal.controller.js"></script>
 
 
     <!--directives-->
