Created stuff to save a comment

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -33,6 +33,7 @@
     <script src="./newscache/service/service.config.js"></script>
     <script src="./newscache/service/navbar.service.js"></script>
     <script src="./newscache/service/interest.service.js"></script>
+    <script src="./newscache/service/storyModal.service.js"></script>
 
     <!--routes-->
     <script src="./newscache/route/route.config.js"></script>
