included the css file in the index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <title>News Cache</title>
     <link href="./bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet" />
     <link href="./css/newscache.css" rel="stylesheet" />
+    <link rel="stylesheet" href="animate.css">
     <link href="./img/favicon.png" rel="icon" />
     <script src="./bower_components/jquery/dist/jquery.js"></script>
     <script src="./bower_components/jquery-bridget/jquery-bridget.js"></script>
