Got the websocket to work. Need to fix the comments in the frontend

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -24,6 +24,9 @@
     <script src="./bower_components/masonry/masonry.js"></script>
     <script src="./bower_components/imagesloaded/imagesloaded.js"></script>
     <script src="./bower_components/angular-masonry/angular-masonry.js"></script>
+    <script src="./bower_components/sockjs/sockjs.min.js"></script>
+    <script src="./bower_components/stomp-websocket/lib/stomp.min.js"></script>
+    <script src="./bower_components/ng-stomp/dist/ng-stomp.min.js"></script>
 
     <script src="./partials.min.js"></script>
     <!--<script src="./all.min.js"></script>-->
