Added a bunch of security stuff. Started working on the login page as well along with authentication.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -38,16 +38,19 @@
     <script src="./newscache/service/navbar.service.js"></script>
     <script src="./newscache/service/interest.service.js"></script>
     <script src="./newscache/service/storyModal.service.js"></script>
+    <script src="./newscache/service/login.service.js"></script>
 
     <!--routes-->
     <script src="./newscache/route/route.config.js"></script>
     <script src="./newscache/route/interest.routes.js"></script>
+    <script src="./newscache/route/login.routes.js"></script>
 
     <!--controllers-->
     <script src="./newscache/controller/controller.config.js"></script>
     <script src="./newscache/controller/navbar.controller.js"></script>
     <script src="./newscache/controller/interest.controller.js"></script>
     <script src="./newscache/controller/storyModal.controller.js"></script>
+    <script src="./newscache/controller/login.controller.js"></script>
 
 
     <!--directives-->
