--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,6 +27,7 @@
     <script src="./bower_components/sockjs/sockjs.min.js"></script>
     <script src="./bower_components/stomp-websocket/lib/stomp.min.js"></script>
     <script src="./bower_components/ng-stomp/dist/ng-stomp.min.js"></script>
+    <script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 
     <script src="./partials.min.js"></script>
     <!--<script src="./all.min.js"></script>-->
@@ -61,7 +62,7 @@
 
 </head>
 <body>
-<div navbar-directive></div>
+<!--<div navbar-directive></div>-->
 <div class="view-container">
     <div ng-view class="view-frame"></div>
 </div>
