Trying to get the back end authentication to work in the manner I want it to.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -40,6 +40,7 @@
     <script src="./newscache/service/interest.service.js"></script>
     <script src="./newscache/service/storyModal.service.js"></script>
     <script src="./newscache/service/login.service.js"></script>
+    <script src="./newscache/service/session.service.js"></script>
 
     <!--routes-->
     <script src="./newscache/route/route.config.js"></script>
