Added stuff for the home. Also changed a few things in the security config files.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,11 +41,13 @@
     <script src="./newscache/service/storyModal.service.js"></script>
     <script src="./newscache/service/login.service.js"></script>
     <script src="./newscache/service/session.service.js"></script>
+    <script src="./newscache/service/home.service.js"></script>
 
     <!--routes-->
     <script src="./newscache/route/route.config.js"></script>
     <script src="./newscache/route/interest.routes.js"></script>
     <script src="./newscache/route/login.routes.js"></script>
+    <script src="./newscache/route/home.routes.js"></script>
 
     <!--controllers-->
     <script src="./newscache/controller/controller.config.js"></script>
@@ -53,6 +55,7 @@
     <script src="./newscache/controller/interest.controller.js"></script>
     <script src="./newscache/controller/storyModal.controller.js"></script>
     <script src="./newscache/controller/login.controller.js"></script>
+    <script src="./newscache/controller/home.controller.js"></script>
 
 
     <!--directives-->
