Created the cookie stuff for storing JSessions. included the modules as well.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,6 +15,7 @@
     <script src="./bower_components/angular-route/angular-route.js"></script>
     <script src="./bower_components/angular-resource/angular-resource.js"></script>
     <script src="./bower_components/angular-messages/angular-messages.js"></script>
+    <script src="./bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="./bower_components/ev-emitter/ev-emitter.js"></script>
     <script src="./bower_components/desandro-matches-selector/matches-selector.js"></script>
     <script src="./bower_components/fizzy-ui-utils/utils.js"></script>
