Made it possible to not have the navbar iin the login page.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -67,7 +67,7 @@
 
 </head>
 <body>
-<!--<div navbar-directive></div>-->
+<div navbar-directive></div>
 <div class="view-container">
     <div ng-view class="view-frame"></div>
 </div>
