Got a lot of shit done.

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -43,6 +43,8 @@
     <script src="./newscache/service/login.service.js"></script>
     <script src="./newscache/service/session.service.js"></script>
     <script src="./newscache/service/home.service.js"></script>
+    <script src="./newscache/service/auth.service.js"></script>
+    <script src="./newscache/service/loginModal.service.js"></script>
 
     <!--routes-->
     <script src="./newscache/route/route.config.js"></script>
@@ -57,6 +59,7 @@
     <script src="./newscache/controller/storyModal.controller.js"></script>
     <script src="./newscache/controller/login.controller.js"></script>
     <script src="./newscache/controller/home.controller.js"></script>
+    <script src="./newscache/controller/loginModal.controller.js"></script>
 
 
     <!--directives-->
