--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,7 +13,7 @@
     <script src="./bower_components/angular/angular.js"></script>
     <script src="./bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="./bower_components/angular-route/angular-route.js"></script>
-    <script src="./bower_components/angular-animate/angular-animate.js"></script>
+    <!--<script src="./bower_components/angular-animate/angular-animate.js"></script>-->
     <script src="./bower_components/angular-resource/angular-resource.js"></script>
     <script src="./bower_components/angular-messages/angular-messages.js"></script>
     <script src="./bower_components/angular-cookies/angular-cookies.js"></script>
